[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "submission-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "temporalio>=1.7.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
worker       = "submission_service.temporal.worker:main"
api          = "submission_service.api.app:main"
mock-samsara = "submission_service.samsara_mock.app:main"
seed         = "scripts.seed_demo_data:main"

[tool.hatch.build.targets.wheel]
packages = ["src/submission_service", "scripts"]
